--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-pytz==2016.4
-django==1.9.6
-python-dateutil==2.5.3
-django-taggit==0.20.2
-djangorestframework==3.6.3
+-e git+https://github.com/PetrDlouhy/django-qsstats-magic.git@205d9a85f1a0174181c88e90940bcdfad14e6e82#egg=django-qsstats-magic
 django-taggit-serializer==0.1.5
--e git+https://github.com/PetrDlouhy/django-qsstats-magic.git#egg=django-qsstats-magic
+django-taggit==0.20.2
+django==1.9.6
+djangorestframework==3.6.3
+python-dateutil==2.5.3
+pytz==2016.4
+uwsgi==2.0.18
+psycopg2-binary==2.8.4
